<resources>
    <string name="app_name">VacunoApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="heading_one">You can register users</string>
    <string name="heading_two">You can register resumes</string>
    <string name="heading_three">You will be able to record milk production</string>
    <string name="heading_fourth">You can record important dates</string>
    <string name="heading_fifth">Follow the production quantity</string>

    <string name="desc_one">Register users in your farm as administrators, veterinarians and workers with only their email</string>
    <string name="desc_two">Register the resumes of your cattle, save data such as date of birth, breed, weight, age and even their parents!</string>
    <string name="desc_three">Record milk production in liters for each cow and shifts, either in the morning or in the afternoon.</string>
    <string name="desc_fourth">Record important dates like the date a cow was bred, or the date a cow is due to receive a vaccination.</string>
    <string name="desc_fifth">Track your total milk production using a graph.</string>
    <string name="modules">Modules</string>
    <string name="users">Users</string>
    <string name="production">Production</string>
    <string name="sheets">Resumes</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="reports">Production report</string>
    <string name="skip">Skip</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="bienvenido">Welcome</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account_sign_up">Create Account? Sign up</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="names">Name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="do_you_already_have_an_account_sign_in">Do you already have an account? Sign in</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="farms">Farms</string>
    <string name="select_your_farm_to_manage">Select your farm to manage</string>
    <string name="add_farm">Add Farm</string>
    <string name="remember">Remember that with the premium version you can have more records</string>
    <string name="premium_version_coming_soon">Premium version coming soon</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_user">Add user</string>
    <string name="list">List</string>
    <string name="enter_new_user_email">Enter new user email</string>
    <string name="user_email">User email</string>
    <string name="select_role">Select role:</string>
    <string name="add_production">Add production</string>
    <string name="editing_role_of">Editing role of:</string>
    <string name="add_milk_production">Add milk production</string>
    <string name="date_of_production">Date of production</string>
    <string name="turn">Turn:</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="user">User:</string>
    <string name="select_cow">Select cow:</string>
    <string name="total">Total</string>
    <string name="liters">Liters</string>
    <string name="add_resume">Add resume</string>
    <string name="select_breed">Select breed:</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_alert">Add alert</string>
    <string name="alert_type">Alert type</string>
    <string name="alert_date">Alert date</string>
    <string name="user_information">User information</string>
    <string name="about_of">About of</string>
    <string name="vacunoapp_is_an">VacunoApp is a management application that allows the recording of important data in milk production, with the main characteristic of data synchronization in situations where there is no internet access.</string>
    <string name="logout">Logout</string>
    <string name="required">Required field</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_credentials">The email or password are incorrect.</string>
    <string name="invalid_password_confirm">Passwords do not match</string>
    <string name="required_terms">Accept the terms and conditions</string>
    <string name="success_registration">Registration completed</string>
    <string name="error">An error has occurred</string>
    <string name="success">Success</string>
    <string name="loading">Loading...</string>
    <string name="limit_farms">Farm limit reached</string>
    <string name="limit_sheets">Resume limit reached</string>
    <string name="limit_alarms">Alert limit reached</string>
    <string name="limit_productions">Record limit reached</string>
    <string name="limit_users">User limit reached</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="max_50">Maximum 50 characters</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_alert">Do you want to remove the alert?</string>
    <string name="max_100_l">Maximum 100 liters</string>
    <string name="first_sheet">You must first add resumes</string>
    <string name="invalid_total">Maximum 6 characters</string>
    <string name="delete_production">Do you want to delete the record?</string>
    <string name="max_20">Maximum 20 characters</string>
    <string name="max_1500_k">Maximum 1500 Kg</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="change_role">Change role</string>
    <string name="go_active">Activate</string>
    <string name="go_inactive">Inactivate</string>
    <string name="already_registered_user">User is already registered in the farm</string>
    <string name="user_not_registered">User not registered in VacunoApp</string>
    <string name="contact">Contact us at: gustavo123.ght@gmail.com</string>

</resources>