<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_milk_production"
                android:textColor="#0C0C0C" />

            <EditText
                android:id="@+id/addProductionDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:ems="10"
                android:hint="@string/date_of_production"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="00dp"
                android:layout_marginRight="0dp"
                android:text="@string/turn"
                android:textColor="#0C0C0C" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/addMProductionRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/morning" />

                <RadioButton
                    android:id="@+id/addTProductionRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/addProductionUserLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user"
                    android:textColor="#0C0C0C" />

                <TextView
                    android:id="@+id/addProductionUserTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Luis"
                    android:textColor="#0C0C0C" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="00dp"
                android:layout_marginRight="0dp"
                android:text="@string/select_cow"
                android:textColor="#0C0C0C" />

            <Spinner
                android:id="@+id/addNameCowProductionSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="00dp"
                android:layout_marginRight="00dp"
                android:layout_marginBottom="0dp"
                android:layout_weight=".60" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <EditText
                    android:id="@+id/addProductionTotalEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/total"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/liters" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addProductionSaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/addProductionCancelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>