<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp">

    <ProgressBar
        android:id="@+id/addFarmProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
        app:layout_constraintStart_toStartOf="@+id/scrollView3"
        app:layout_constraintTop_toTopOf="@+id/scrollView3"
        app:layout_constraintVertical_bias="0.8" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_farm"
                android:textColor="#0C0C0C" />

            <EditText
                android:id="@+id/addFarmNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addFarmSaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/addFarmCancelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>