<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.IntroActivity">

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/skip"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:textColor="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/backbtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_left"
        android:gravity="clip_horizontal|left"
        android:paddingVertical="8dp"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_right"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:gravity="right|center_horizontal"
        android:paddingVertical="8dp"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/slideViewPager">


    </LinearLayout>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bienvenido"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline4"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>