<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/editing_role_of"
                    android:textColor="#0C0C0C" />

                <TextView
                    android:id="@+id/editUserEmailRolTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="eder@falta"
                    android:textColor="#0C0C0C" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="00dp"
                android:layout_marginRight="0dp"
                android:text="@string/select_role"
                android:textColor="#0C0C0C" />

            <Spinner
                android:id="@+id/editRolSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="00dp"
                android:layout_marginRight="00dp"
                android:layout_marginBottom="0dp"
                android:layout_weight=".60"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editRolSaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/editRolCancelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>